changed from commonjs to type module

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "exam_prep_backend",
+  "version": "1.0.0",
+  "type": "module",    
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
