--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,13 @@
 {
   "name": "exam_prep_backend",
   "version": "1.0.0",
+  "main": "src/server.js",
+
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
+  },
+
   "type": "module",    
   "dependencies": {
     "bcryptjs": "^3.0.3",
