--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,13 +2,11 @@
   "name": "exam_prep_backend",
   "version": "1.0.0",
   "main": "src/server.js",
-
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
-
-  "type": "module",    
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -17,6 +15,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "xlsx": "^0.18.5"
   }
 }
